# NoveoTest

./: CMakeLists.txt  README.md
CMakeModules/: AddExtraCompilationFlags.cmake  AddSourceGroupFlags.cmake
Core/: CMakeLists.txt  DBTableAbstract.h  DBTableInfo.h  DBTableUserView.h  ITunesSearchEngine.cpp  ITunesSearchEngine.h  JSONParserAbstract.cpp  JSONParserAbstract.h  JSONSearchResult.cpp  JSONSearchResult.h  JSONSearchResultList.cpp  JSONSearchResultList.h  Model.h  ModelInfo.cpp  ModelInfo.h  ModelUserView.cpp  ModelUserView.h  Singleton.h
Core/private/: ITunesSearchEngine_p.h
UI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ResultViewWidget.cpp  ResultViewWidget.h  ResultViewWidget.ui  main.cpp
